--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
          <p>Analytical, business-minded professional with extensive experience directing and enhancing companywide operations against aggressive metrics. Articulate communicator and relentless networker skilled in strengthening relationships across functions. Proven leader and mentor of large, multidisciplinary teams. Areas of Expertise:</p>
   
     <ul>
-      <li> Business & Office Management </li>
+      <li> Business and Office Management </li>
       <li> Strategic Planning </li>
-      <li> Team Building & Leadership </li>
-      <li> Customer Service & Retention </li>
+      <li> Team Building and Leadership </li>
+      <li> Customer Service and Retention </li>
       <li> Process Improvements  </li>
-      <li> Writing & Research </li>
+      <li> Writing and Research </li>
       <li> MS Office Suite </li>
-      <li> Communications & Presentations </li>
+      <li> Communications and Presentations </li>
     </ul>
     
     
