--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   <body>
     <h1><center>Tiffany Love</center></h1>
+    <h4><center>tnlove_99@yahoo.com • 612.203.2823</center><h4>
     <h2><p><center>Professional Summary</center></p></h2>
     <h3><center><i>10 Years of High-Impact Performance in Customer-Focused Environments</i></center></h3>
          <p>Analytical, business-minded professional with extensive experience directing and enhancing companywide operations against aggressive metrics. Articulate communicator and relentless networker skilled in strengthening relationships across functions. Proven leader and mentor of large, multidisciplinary teams. <i>Areas of Expertise:</i></p>
