--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <title>Tiffany Love</title>
   </head>
-  
+  <style>
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+}
+
+p {
+    font-family: verdana;
+    font-size: 20px;
+}
+</style>
+</head>
+<body>
   <body>
     <h1><center>Tiffany Love</center></h1>
     <hr>
