--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   </head>
   <style>
 body {
-    background-color: purple;
+    background-color: lightblue;
 }
 
 h1 {
-    color: white;
+    color: Navy;
     text-align: center;
 }
 
 p {
     font-family: verdana;
-    font-size: 10px;
+    font-size: 15px;
 }
 </style>
 </head>
