--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
     <h1><center>Tiffany Love</center></h1>
     <hr>
     <h4><center>tnlove_99@yahoo.com • 612.203.2823</center><h4>
-      <img src="https://www.flickr.com/photos/146066593@N04/shares/H3125y" style="width:304px;height:228px;"/>
+      <img src="https://www.flickr.com/photos/146066593@N04/" style="width:304px;height:228px;"/>
       
     <h2><p><center>Professional Summary</center></p></h2>
     <h3><center><i>10 Years of High-Impact Performance in Customer-Focused Environments</i></center></h3>
