--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ p {
     <h1><center>Tiffany Love</center></h1>
     <hr>
     <h4><center>tnlove_99@yahoo.com • 612.203.2823</center><h4>
-     <a href="http://tinypic.com?ref=ajqo9u" target="_blank"><img src="http://i67.tinypic.com/ajqo9u.jpg" border="0" alt="Image and video hosting by TinyPic">style="width:128px;height:128px;"></a>
+     <a href="http://tinypic.com?ref=ajqo9u" target="_blank"><img src="http://i67.tinypic.com/ajqo9u.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
       
     <h2><p><center>Professional Summary</center></p></h2>
     <h3><center><i>10 Years of High-Impact Performance in Customer-Focused Environments</i></center></h3>
